deploy/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coxswain-system
  labels:
    app.kubernetes.io/name: coxswain
    app.kubernetes.io/managed-by: coxswain
